--- a/web/gestionIngJefe.xhtml
+++ b/web/gestionIngJefe.xhtml
@@ -1,16 +1,85 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <title>TODO supply a title</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui">
+
+    <f:view contentType="text/html">
+        <h:head>
+            <f:facet name="first">
+                <meta content='text/html; charset=UTF-8' http-equiv="Content-Type"/>
+                <title>Ingenieros Jefes</title>
+            </f:facet>
+        </h:head>
+
+        <h:body>
+
+            <p:layout fullPage="true">
+
+                <p:layoutUnit position="north" size="80" resizable="true" closable="true" collapsible="true">
+                    INGENIEROS JEFES
+                </p:layoutUnit>
+
+                <p:layoutUnit position="south" size="80" closable="true" collapsible="true">
+                    CHRISTIAN DAVID NOREÑA VALENCIA<p></p>
+                    UVTULUA 2016
+                </p:layoutUnit>
+
+                <p:layoutUnit position="west" size="175" header="Left" collapsible="true">
+                    <h:form>
+                        <p:menu>
+                            <p:submenu label="Menú">
+                                <p:menuitem value="Demo" url="http://www.primefaces.org/showcase-labs/ui/home.jsf" />
+                                <p:menuitem value="Documentation" url="http://www.primefaces.org/documentation.html" />
+                                <p:menuitem value="Forum" url="http://forum.primefaces.org/" />
+                                <p:menuitem value="Themes" url="http://www.primefaces.org/themes.html" />
+                            </p:submenu>
+                        </p:menu>                        
+                    </h:form>
+                </p:layoutUnit>
+
+                <p:layoutUnit position="center">
+                    <h:form id="formulario">
+                        <p:growl id="growl" showDetail="true" sticky="true" escape="false"/>
+                        <p:panelGrid columns="4">
+                            <h:outputText value="Ingeniero Software"/>
+                            <p:selectOneMenu id="cmbIngSoftware" binding="#{jefeVista.cmbIngSoftware}">
+                                <f:selectItem itemValue="Seleccione" itemLabel="Seleccione"/>
+                                <f:selectItems value="#{jefeVista.itemsIngsoftware}"/>
+                            </p:selectOneMenu>
+                            <h:outputText value="Presupuesto (COP)"/>
+                            <p:inputText id="txtPresupuesto" binding="#{jefeVista.txtPresupuesto}"/>                           
+                        </p:panelGrid>
+                        <p:panelGrid columns="4">
+                            <p:commandButton value="Registrar" binding="#{jefeVista.btnRegistrar}" action="#{jefeVista.action_registrar()}" update=":formulario"/> 
+                            <p:commandButton value="Modificar" binding="#{jefeVista.btnModificar}" action="#{jefeVista.action_modificar()}" update=":formulario"/>
+                            <p:commandButton value="Eliminar" binding="#{jefeVista.btnEliminar}" action="#{jefeVista.action_eliminar()}" update=":formulario"/>
+                            <p:commandButton value="Limpiar" binding="#{jefeVista.btnLimpiar}" action="#{jefeVista.limpiar()}" update=":formulario"/>
+                        </p:panelGrid>
+                        <p:dataTable id="eventsDT" var="jefe" value="#{jefeVista.listaJefes}" selectionMode="single" selection="#{jefeVista.selectedJefe}" rowKey="#{jefe.cedula}">
+                            <f:facet name="header">
+                                Ingenieros Jefes
+                            </f:facet>
+                            <p:ajax event="rowSelect" listener="#{jefeVista.onRowSelect}" update=":formulario" />
+
+                            <p:column headerText="Cédula">
+                                <h:outputText value="#{jefe.cedula}" />
+                            </p:column>                            
+                            <p:column headerText="Ingeniero">
+                                <h:outputText value="#{jefe.ingsoftware.nombres} #{jefe.ingsoftware.apellidos}" />
+                            </p:column>
+                            <p:column headerText="Presupuesto (COP)">
+                                <h:outputText value="#{jefe.presupuesto}" />
+                            </p:column>
+                        </p:dataTable>                    
+                    </h:form>
+                </p:layoutUnit>
+
+            </p:layout>
+
+        </h:body>
+
+    </f:view>
 </html>
+            
