--- a/web/gestionIngSeminario.xhtml
+++ b/web/gestionIngSeminario.xhtml
@@ -1,16 +1,132 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <title>TODO supply a title</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui">
+
+    <f:view contentType="text/html">
+        <h:head>
+            <f:facet name="first">
+                <meta content='text/html; charset=UTF-8' http-equiv="Content-Type"/>
+                <title>Seminarios</title>
+            </f:facet>
+            <script>
+                PrimeFaces.locales["es"] = {
+                    closeText: "Cerrar",
+                    prevText: "Anterior",
+                    nextText: "Siguiente",
+                    monthNames: ["Enero","Febrero", "Marzo", "Abril", "Mayo", "Junio", "Julio", "Agosto", "Septiembre", "Octubre", "Noviembre", "Diciembre"],
+                    monthNamesShort: ["Ene", "Feb", "Mar", "Abr", "May", "Jun", "Jul", "Ago", "Sep", "Oct", "Nov", "Dic"],
+                    dayNames: ["Domingo", "Lunes", "Martes", "Miércoles", "Jueves", "Viernes", "Sábado"],
+                    dayNamesShort: ["Dom", "Lun", "Mar", "Mie", "Jue", "Vie", "Sab"],
+                    dayNamesMin: ["Do", "Lu", "Ma", "Mi", "Ju", "Vi", "Sa"],
+                    weekHeader: "Semana",
+                    firstDay: 0,
+                    isRTL: false,
+                    showMonthAfterYear: false,
+                    yearSuffix: "",
+                    timeOnlyTitle: "Solo hora",
+                    timeText: "Tiempo",
+                    hourText: "Hora",
+                    minuteText: "Minuto",
+                    secondText: "Segundo",
+                    currentText: "Fecha actual",
+                    ampm: false,
+                    month: "Mes",
+                    week: "Semana",
+                    day: "Día",
+                    allDayText : "Todo el día"
+                };                
+            </script>            
+        </h:head>
+
+        <h:body>
+
+            <p:layout fullPage="true">
+
+                <p:layoutUnit position="north" size="80" resizable="true" closable="true" collapsible="true">
+                    SEMINARIOS
+                </p:layoutUnit>
+
+                <p:layoutUnit position="south" size="80" closable="true" collapsible="true">
+                    CHRISTIAN DAVID NOREÑA VALENCIA<p></p>
+                    UVTULUA 2016
+                </p:layoutUnit>
+
+                <p:layoutUnit position="west" size="175" header="Left" collapsible="true">
+                    <h:form>
+                        <p:menu>
+                            <p:submenu label="Menú">
+                                <p:menuitem value="Demo" url="http://www.primefaces.org/showcase-labs/ui/home.jsf" />
+                                <p:menuitem value="Documentation" url="http://www.primefaces.org/documentation.html" />
+                                <p:menuitem value="Forum" url="http://forum.primefaces.org/" />
+                                <p:menuitem value="Themes" url="http://www.primefaces.org/themes.html" />
+                            </p:submenu>
+                        </p:menu>                        
+                    </h:form>
+                </p:layoutUnit>
+
+                <p:layoutUnit position="center">
+                    <h:form id="formulario">
+                        <p:growl id="growl" showDetail="true" sticky="true" escape="false"/>
+                        <p:panelGrid columns="6">
+                            <h:outputText value="Número"/>
+                            <p:inputText id="txtNumero" binding="#{seminarioVista.txtNumero}"/>
+                            
+                            <h:outputText value="Ingeniero"/>
+                            <p:selectOneMenu id="cmbIngenieros" binding="#{seminarioVista.cmbIngenieros}">
+                                <f:selectItem itemValue="Seleccione" itemLabel="Seleccione"/>
+                                <f:selectItems value="#{seminarioVista.itemsIngenieros}"/>
+                            </p:selectOneMenu>                            
+
+                            <h:outputText value="Nombre"/>
+                            <p:inputText id="txtNombre" binding="#{seminarioVista.txtNombre}"/>                            
+                            <h:outputText value="Lugar"/>
+                            <p:inputText id="txtLugar" binding="#{seminarioVista.txtLugar}"/>
+                            <h:outputText value="Fecha Inicio"/>
+                            <p:calendar id="txtFechainicio" value="#{seminarioVista.txtFechainicio}" pattern="yyyy-MM-dd" locale="es" navigator="true" readonlyInput="true"/>
+                            <h:outputText value="Fecha Finalización"/>
+                            <p:calendar id="txtFechafin" value="#{seminarioVista.txtFechafin}" pattern="yyyy-MM-dd" locale="es" navigator="true" readonlyInput="true"/>
+                        </p:panelGrid>
+                        <p:panelGrid columns="4">
+                            <p:commandButton value="Registrar" binding="#{seminarioVista.btnRegistrar}" action="#{seminarioVista.action_registrar()}" update=":formulario"/> 
+                            <p:commandButton value="Modificar" binding="#{seminarioVista.btnModificar}" action="#{seminarioVista.action_modificar()}" update=":formulario"/>
+                            <p:commandButton value="Eliminar" binding="#{seminarioVista.btnEliminar}" action="#{seminarioVista.action_eliminar()}" update=":formulario"/>
+                            <p:commandButton value="Limpiar" binding="#{seminarioVista.btnLimpiar}" action="#{seminarioVista.limpiar()}" update=":formulario"/>
+                        </p:panelGrid>
+                        <p:dataTable id="eventsDT" var="seminario" value="#{seminarioVista.listaSeminarios}" selectionMode="single" selection="#{seminarioVista.selectedSeminario}" rowKey="#{seminario.numero}">
+                            <f:facet name="header">
+                                Seminarios
+                            </f:facet>
+                            <p:ajax event="rowSelect" listener="#{seminarioVista.onRowSelect}" update=":formulario" />
+
+                            <p:column headerText="Número">
+                                <h:outputText value="#{seminario.numero}" />
+                            </p:column>                            
+                            <p:column headerText="Ingeniero">
+                                <h:outputText value="#{seminario.ingeniero.nombres} #{seminario.ingeniero.apellidos}" />
+                            </p:column>
+                             <p:column headerText="Nombre">
+                                 <h:outputText value="#{seminario.nombre}" />
+                            </p:column>
+                             <p:column headerText="Lugar">
+                                 <h:outputText value="#{seminario.lugar}" />
+                            </p:column>
+                             <p:column headerText="Fecha Inicio">
+                                 <h:outputText value="#{seminario.fechainicio}">
+                                     <f:convertDateTime type="date" pattern="yyyy-MM-dd"/>
+                                 </h:outputText>
+                            </p:column>
+                             <p:column headerText="Fecha Fin">
+                                 <h:outputText value="#{seminario.fechafin}">
+                                     <f:convertDateTime type="date" pattern="yyyy-MM-dd"/>                                     
+                                 </h:outputText>
+                            </p:column>                           
+                        </p:dataTable>                        
+                    </h:form>
+                </p:layoutUnit>
+            </p:layout>
+        </h:body>
+    </f:view>
 </html>
