--- a/web/gestionProyectoSO.xhtml
+++ b/web/gestionProyectoSO.xhtml
@@ -9,7 +9,7 @@
         <h:head>
             <f:facet name="first">
                 <meta content='text/html; charset=UTF-8' http-equiv="Content-Type"/>
-                <title>SGBD's Ingenieros Software</title>
+                <title>Sistemas Operativos Proyectos</title>
             </f:facet>
         </h:head>
 
@@ -18,7 +18,7 @@
             <p:layout fullPage="true">
 
                 <p:layoutUnit position="north" size="80" resizable="true" closable="true" collapsible="true">
-                    SISTEMAS GESTORES DE BASES DE DATOS INGENIEROS SOFTWARE
+                    SISTEMAS OPERATIVOS PROYECTOS
                 </p:layoutUnit>
 
                 <p:layoutUnit position="south" size="80" closable="true" collapsible="true">
@@ -43,38 +43,38 @@
                     <h:form id="formulario">
                         <p:growl id="growl" showDetail="true" sticky="true" escape="false"/>
                         <p:panelGrid columns="4">
-                            <h:outputText value="Ingeniero Software"/>
-                            <p:selectOneMenu id="cmbIngSoftware" binding="#{ingsoftwaresgbdVista.cmbIngSoftware}">
+                            <h:outputText value="Proyecto"/>
+                            <p:selectOneMenu id="cmbProyectos" binding="#{proyectosistemaoperativoVista.cmbProyectos}">
                                 <f:selectItem itemValue="Seleccione" itemLabel="Seleccione"/>
-                                <f:selectItems value="#{ingsoftwaresgbdVista.itemsIngsoftware}"/>
+                                <f:selectItems value="#{proyectosistemaoperativoVista.itemsProyectos}"/>
                             </p:selectOneMenu>
-                            <h:outputText value="Sistema Gestor de BD's que conoce"/>
-                            <p:inputText id="txtSGBD" binding="#{ingsoftwaresgbdVista.txtSGBD}"/>                           
+                            <h:outputText value="Sistema Operativo"/>
+                            <p:inputText id="txtSistemaOperativo" binding="#{proyectosistemaoperativoVista.txtSistemaOperativo}"/>                           
                         </p:panelGrid>
                         <p:panelGrid columns="3">
-                            <p:commandButton value="Registrar" binding="#{ingsoftwaresgbdVista.btnRegistrar}" action="#{ingsoftwaresgbdVista.action_registrar()}" update=":formulario"/> 
-                            <p:commandButton value="Eliminar" binding="#{ingsoftwaresgbdVista.btnEliminar}" action="#{ingsoftwaresgbdVista.action_eliminar()}" update=":formulario"/>
-                            <p:commandButton value="Limpiar" binding="#{ingsoftwaresgbdVista.btnLimpiar}" action="#{ingsoftwaresgbdVista.limpiar()}" update=":formulario"/>
+                            <p:commandButton value="Registrar" binding="#{proyectosistemaoperativoVista.btnRegistrar}" action="#{proyectosistemaoperativoVista.action_registrar()}" update=":formulario"/> 
+                            <p:commandButton value="Eliminar" binding="#{proyectosistemaoperativoVista.btnEliminar}" action="#{proyectosistemaoperativoVista.action_eliminar()}" update=":formulario"/>
+                            <p:commandButton value="Limpiar" binding="#{proyectosistemaoperativoVista.btnLimpiar}" action="#{proyectosistemaoperativoVista.limpiar()}" update=":formulario"/>
                         </p:panelGrid>
                         <p:panelGrid columns="1">
-                            Nota: Cuando se registran SGBD's conocidos por los ingenieros de software, sólo se puede dar la opción Eliminar, 
-                            aunque es una forma indirecta de editar. Así, si deseas editar, se crea el nuevo registro con la misma cédula Ing. Software 
-                            y luego elimina el reemplazado.
+                            Nota: Cuando se registran Sistemas Operativos realizados en los proyectos, sólo se puede dar la opción 
+                            Eliminar, aunque es una forma indirecta de editar. Así, si deseas editar, se crea el nuevo registro con el mismo código
+                            Proyecto y luego elimina el reemplazado.
                         </p:panelGrid>                            
-                        <p:dataTable id="eventsDT" var="ingsoftwaresgbd" value="#{ingsoftwaresgbdVista.listaIngsoftwaresgbds}" selectionMode="single" selection="#{ingsoftwaresgbdVista.selectedIngsoftwaresgbd}" rowKey="#{ingsoftwaresgbd.ingsoftwaresgbdPK}">
+                        <p:dataTable id="eventsDT" var="proyectosistemaoperativo" value="#{proyectosistemaoperativoVista.listaProyectosistemaoperativos}" selectionMode="single" selection="#{proyectosistemaoperativoVista.selectedProyectosistemaoperativo}" rowKey="#{proyectosistemaoperativo.proyectosistemaoperativoPK}">
                             <f:facet name="header">
-                                Sistemas Gestores de BD's
+                                Sistemas Operativos
                             </f:facet>
-                            <p:ajax event="rowSelect" listener="#{ingsoftwaresgbdVista.onRowSelect}" update=":formulario" />
+                            <p:ajax event="rowSelect" listener="#{proyectosistemaoperativoVista.onRowSelect}" update=":formulario" />
 
-                            <p:column headerText="Cédula">
-                                <h:outputText value="#{ingsoftwaresgbd.ingsoftwaresgbdPK.cedula}" />
+                            <p:column headerText="Código">
+                                <h:outputText value="#{proyectosistemaoperativo.proyectosistemaoperativoPK.codigo}" />
                             </p:column>
                             <p:column headerText="Ingeniero Software">
-                                <h:outputText value="#{ingsoftwaresgbd.ingsoftware.nombres} #{ingsoftwaresgbd.ingsoftware.apellidos}" />
+                                <h:outputText value="#{proyectosistemaoperativo.proyecto.nombre}" />
                             </p:column>                             
-                            <p:column headerText="SGBD">
-                                <h:outputText value="#{ingsoftwaresgbd.ingsoftwaresgbdPK.sgbd}" />
+                            <p:column headerText="Sistema Operativo">
+                                <h:outputText value="#{proyectosistemaoperativo.proyectosistemaoperativoPK.sistemaoperativo}" />
                             </p:column>
                         </p:dataTable>                    
                     </h:form>
@@ -86,3 +86,4 @@
 
     </f:view>
 </html>
+
