Pequeños cambios al Cliente Desarrollo.

--- a/web/gestionDesarrollo.xhtml
+++ b/web/gestionDesarrollo.xhtml
@@ -18,7 +18,7 @@
             <p:layout fullPage="true">
 
                 <p:layoutUnit position="north" size="80" resizable="true" closable="true" collapsible="true">
-                    COLABORACIONES INGENIEROS JUNIOR
+                    DESARROLLO DE PROYECTOS
                 </p:layoutUnit>
 
                 <p:layoutUnit position="south" size="80" closable="true" collapsible="true">
