--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -1,14 +1,64 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
-    <h:head>
-        <title>Facelet Title</title>
-    </h:head>
-    <h:body>
-        Hello from Facelets
-        <br />
-        <h:link outcome="welcomePrimefaces" value="Primefaces welcome page" />
-    </h:body>
-</html>
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui">
 
+    <f:view contentType="text/html">
+        <h:head>
+            <f:facet name="first">
+                <meta content='text/html; charset=UTF-8' http-equiv="Content-Type"/>
+                <title>Proyecto Final</title>
+            </f:facet>
+        </h:head>
+
+        <h:body>
+
+            <p:layout fullPage="true">
+
+                <p:layoutUnit position="north" size="50" resizable="true" closable="true" collapsible="true">
+                    PROYECTO ACTUALIZACIÓN EN COMPETENCIAS LABORALES
+                </p:layoutUnit>
+                
+                <p:layoutUnit position="south" resizable="true" closable="true" collapsible="true">
+                    JAVIER SIMÓN NARANJO HERRERA<p></p>
+                    CHRISTIAN DAVID NOREÑA VALENCIA
+                </p:layoutUnit>
+                <p:layoutUnit position="center">
+                    <h:form id="forma">
+                        <p:growl id="growl" showDetail="true" sticky="true" />
+                        <p:panel id="campos">
+                            <p:panelGrid>
+                                <p:row>
+                                    <p:column>
+                                        <h:outputText value="Usuario"/>
+                                    </p:column>
+                                    <p:column>
+                                        <p:inputText id="txtUsuario" binding="#{sesionVista.txtUsuario}"/>
+                                    </p:column>
+                                    <p:column>
+                                        <h:outputText value="Clave"/>
+                                    </p:column>
+                                    <p:column>
+                                        <p:password id="txtClave" binding="#{sesionVista.txtClave}"/>
+                                    </p:column>                                    
+                                </p:row>
+                                <p:row>
+                                    <p:column>
+                                        <p:commandButton id="btnIngresar"  value="Ingresar"  action="#{sesionVista.funcion_ingresar}" update="growl" />
+                                    </p:column>                                    
+                                </p:row>
+                            </p:panelGrid>
+                        </p:panel>
+                        
+                    </h:form>
+                </p:layoutUnit>
+
+            </p:layout>
+
+        </h:body>
+
+    </f:view>
+</html>
