Implementados los filtros

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -47,7 +47,7 @@
                                 </p:row>
                                 <p:row>
                                     <p:column>
-                                        <p:commandButton id="btnIngresar"  value="Ingresar"  action="#{sesionVista.funcion_ingresar}" update="growl" />
+                                        <p:commandButton id="btnIngresar"  value="Ingresar"  action="#{sesionVista.iniciarSesion()}" update="growl" />
                                     </p:column>                                    
                                 </p:row>
                             </p:panelGrid>
