--- a/web/jefe/gestionIngGradoAcademico.xhtml
+++ b/web/jefe/gestionIngGradoAcademico.xhtml
@@ -10,7 +10,12 @@
             <f:facet name="first">
                 <meta content='text/html; charset=UTF-8' http-equiv="Content-Type"/>
                 <title>Grados Académicos</title>
-            </f:facet>           
+            </f:facet>
+            <style>
+                .ui-menu {
+                    width: 140px;
+                }
+            </style>
         </h:head>
 
         <h:body>
@@ -19,11 +24,6 @@
 
                 <p:layoutUnit position="north" size="80" resizable="true" closable="true" collapsible="true">
                     GRADOS ACADÉMICOS
-                </p:layoutUnit>
-
-                <p:layoutUnit position="south" size="80" closable="true" collapsible="true">
-                    CHRISTIAN DAVID NOREÑA VALENCIA<p></p>
-                    UVTULUA 2016
                 </p:layoutUnit>
 
                 <p:layoutUnit position="west" size="175" header="Left" collapsible="true">
