--- a/web/jefe/gestionIngSoftwareSO.xhtml
+++ b/web/jefe/gestionIngSoftwareSO.xhtml
@@ -11,6 +11,11 @@
                 <meta content='text/html; charset=UTF-8' http-equiv="Content-Type"/>
                 <title>Sistemas Operativos Ingenieros Software</title>
             </f:facet>
+            <style>
+                .ui-menu {
+                    width: 140px;
+                }
+            </style>
         </h:head>
 
         <h:body>
@@ -19,11 +24,6 @@
 
                 <p:layoutUnit position="north" size="80" resizable="true" closable="true" collapsible="true">
                     SISTEMAS OPERATIVOS INGENIEROS SOFTWARE
-                </p:layoutUnit>
-
-                <p:layoutUnit position="south" size="80" closable="true" collapsible="true">
-                    CHRISTIAN DAVID NOREÑA VALENCIA<p></p>
-                    UVTULUA 2016
                 </p:layoutUnit>
 
                 <p:layoutUnit position="west" size="175" header="Left" collapsible="true">
