--- a/web/jefe/gestionIngJunior.xhtml
+++ b/web/jefe/gestionIngJunior.xhtml
@@ -26,7 +26,7 @@
                     INGENIEROS JUNIOR
                 </p:layoutUnit>
 
-                <p:layoutUnit position="west" size="175" header="Left" collapsible="true">
+                <p:layoutUnit position="west" header="Colapsar" collapsible="true">
                     <h:form>
                         <p:menu>
                             <p:submenu label="Menú">
