--- a/web/jefe/gestionIngSoftware.xhtml
+++ b/web/jefe/gestionIngSoftware.xhtml
@@ -54,7 +54,7 @@
                     INGENIEROS DE SOFTWARE
                 </p:layoutUnit>
 
-                <p:layoutUnit position="west" size="175" header="Left" collapsible="true">
+                <p:layoutUnit position="west" header="Colapsar" collapsible="true">
                     <h:form>
                         <p:menu>
                             <p:submenu label="Menú">
