--- a/web/jefe/gestionIngSoftwareSO.xhtml
+++ b/web/jefe/gestionIngSoftwareSO.xhtml
@@ -35,7 +35,8 @@
                                 <p:menuitem value="Forum" url="http://forum.primefaces.org/" />
                                 <p:menuitem value="Themes" url="http://www.primefaces.org/themes.html" />
                             </p:submenu>
-                        </p:menu>                        
+                        </p:menu>    
+                        <p:commandButton value="Cerrar Sesión" action="#{sesionVista.cerrarSesion()}"/>
                     </h:form>
                 </p:layoutUnit>
 
